--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,19 +10,27 @@
 }
 
 h1 {
-	font-size: 100px;
+	font-size: 150px;
 }
 h2{
     font-family:GothamMedium;
-    font-size: 40px;
+    font-size: 70px;
 }
 h3 {
-	font-size: 24px;
+	font-size: 40px;
 	font-family: 'Playfair Display', serif;
 }
 
 a {
 	font-family: GothamMedium;
+}
+h4{
+	font-family:GothamMedium;
+	font-size: 30px;
+}
+p{
+	font-family: GothamBook;
+	font-size: 20px;
 }
 
 .hackCvilleLogo{
@@ -90,6 +98,40 @@ a {
 .about_subtitle h2{
     margin-top: -4px;
 }
+.image{
+    width:600px;
+    height: 480px;
+	/*width: 16vw;
+	height: 27vh;*/
+	background-size: cover;
+	display: inline-block;
+}
+.imageOneSpecific{
+	background-image:url("../images/aboutImageOne.png");
+}
+.aboutText{
+	display: inline-block;
+	width: 35%;
+	vertical-align: top;
+	margin-top: 120px;
+	text-align: left;
+}
+.firstTextSpecific{
+	margin-left: 4vw;
+}
+.aboutHolder{
+	text-align: center;
+	margin-top: 50px;
+}
+.secondTextSpecific{
+}
+.imageTwoSpecific{
+	background-image:url("../images/premiereEdit.png");
+}
+.aboutHolderTwo{
+	margin-top: 80px;
+}
+
 @media screen and (max-width: 800px) {
 	h1 {
 		font-size: 90px;
