--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -210,6 +210,24 @@ p{
 	font-size: 20px;
 	color:#3187c8;
 }
+.ccBlackRectangle{
+	border: 3px solid black;
+	width: 180px;
+	height: 50px;
+	margin-top: 255px;
+	margin-left:120px;
+	position: relative;
+}
+.ccBlackRectangle h4{
+	margin-top: 2px;
+}
+.ccTealRectangle{
+	width: 177px;
+	height: 47px;
+	background-color: #09ffe7;
+	margin-left: 115px;
+	margin-top: -55px;
+}
 
 
 /* -------------------------- animation stuff im trying -------------------------- */
@@ -264,6 +282,13 @@ p{
 	}
 	.aboutText{
 		margin-top: -14px;
+	}
+	.CCtext h5{
+		font-size: 20px;
+		margin-top: -50px;
+	}
+	.CCtext{
+		width: 40%;
 	}
 }
 @media screen and (max-width: 800px) {
@@ -338,8 +363,20 @@ p{
 	.hideWhenMobile{
 		display: none;
 	}
-	.CC{
+	.ccimage{
 		width: 100%;
+	}
+	.CCtext{
+		width:100%;
+		margin-top:100px;
+	}
+	.ccBlackRectangle{
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.ccTealRectangle{
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 }
