Pushing again just to be safe, no real changes

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -245,6 +245,7 @@ p{
 }
 .Ceciliatext h5{
 	font-size: 30px;
+	display: inline-block;
 }
 
 /* -------------------------- animation stuff im trying -------------------------- */
