--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -196,10 +196,11 @@ p{
 .skills-title h3 {
 	margin-bottom: 0px;
 	font-size: 35px;
+	margin-top: 30px;
 }
 
 .skills-title h2 {
-	margin-bottom: 30px;
+	margin-bottom: 40px;
 	margin-top: -4px;
 }
 
@@ -330,6 +331,8 @@ p{
 	color: #3187c8;
 	font-size: 20px;
 	overflow: hidden;
+	background-color: white;
+	padding: 10px;
 }
 
 .curr-link a:hover {
@@ -345,7 +348,12 @@ p{
 	height: 50px;
 }
 
+.desktop {
+	margin-bottom: 20px;
+}
+
 .mobile {
+	margin-bottom: 20px;
 	display: none;
 }
 
