--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -188,6 +188,7 @@ p{
 }
 .instructors{
 	text-align: center;
+	margin-bottom: 50px;
 }
 .CCtext{
 	margin-left: 4vw;
@@ -434,6 +435,33 @@ p{
 	display: none;
 }
 
+.student-work {
+	text-align: center;
+}
+.row-fluid h2 {
+	margin-top: 0;
+}
+
+.slide {
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+.widescreen {
+	margin: 0 auto;
+	text-align: center;
+}
+
+.carousel-control.left, .carousel-control.right {
+    background-image: none
+}
+
+.glyphicon-chevron-left, .glyphicon-chevron-right {
+	color: black;
+}
+
+
+
 
 /* -------------------------- animation stuff im trying -------------------------- */
 
@@ -502,6 +530,7 @@ p{
 	}
 	.CCtext{
 		width: 40%;
+	}
 
 	h3 {
 		font-size: 30px;
@@ -524,6 +553,14 @@ p{
 		margin-bottom: 30px;
 
 	}
+}
+
+@media screen and (max-width: 930px) {
+	iframe {
+		width: 320px;
+		height: 240px;
+	}
+
 }
 
 @media screen and (max-width: 800px) {
