added the active option so on mobile you can click and it will show skill title

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -564,6 +564,11 @@ iframe:hover {
 		display: inline-block;
 	}
 
+	.hover-container:active .overlay{
+		bottom: 0;
+		height: 100%;
+	}
+
 	.desktop {
 		display: none;
 	}
