--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -573,13 +573,44 @@ iframe:hover {
 .showLogosWhenMobile{
     display: none;
 }
+.footer{
+    width: 100%;
+    height: 300px;
+/*    background-color: #09ffe7;*/
+    background-color: rgba(119,136,153,0.4);
+    margin-top: 50px;
+    position: relative;
+}
+.footerText{
+    width:40%;
+    position: absolute;
+    top:25px;
+    left: 200px;
+}
+.emailForm{
+    width:35%;
+    position: absolute;
+    top: 50px;
+    right: 220px;
+}
+.form-group label{
+    font-family: GothamMedium;
+}
+.form-group input{
+    font-family: GothamMedium;
+}
+.btn{
+    font-family: GothamMedium;
+}
+
+
 
 
 
 /* -------------------------- animation stuff im trying -------------------------- */
 
 .cmn-t-pulse {
-  color: #fff;
+  color: black;
   background-color: #09ffe7;
   animation: pulse 1s ease infinite;
   /* transition: transform 0.2s; */
@@ -603,6 +634,21 @@ iframe:hover {
 }
 
 /* ^^^ -------------------------- animation stuff im trying -------------------------- ^^^ */ 
+@media screen and (max-width: 1600px) {
+    .footerText h3{
+        font-size:30px;
+    }
+    .footerText p{
+        font-size: 18px;
+    }
+    .footerText{
+        left: 140px;
+    }
+    .emailForm{
+        right: 100px;
+    }
+}
+
 @media screen and (max-width: 1210px) {
 	.Ceciliatext h5{
 	font-size: 25px;
@@ -681,6 +727,20 @@ iframe:hover {
     .row{
         width: 100%;
     }
+    .footerText h3{
+        font-size:24px;
+    }
+    .footerText p{
+        font-size: 14px;
+    }
+    .footerText{
+        left: 40px;
+        top: 50px;
+    }
+    .emailForm{
+        right: 40px;
+    }
+    
 }
 @media screen and (max-width: 995px) {
 
@@ -889,8 +949,19 @@ iframe:hover {
 	.row-fluid h2 {
 		font-size: 40px;
 	}
-
-
+    .footerText h3{
+        font-size:18px;
+    }
+    .footerText p{
+        font-size: 12px;
+    }
+    .footerText{
+        left: 10px;
+        top:0;
+    }
+    .emailForm{
+        right: 110px;
+    }
 }
 @media screen and (max-width: 600px) {
 	.about_subtitle h2{
