--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -618,20 +618,21 @@ iframe:hover {
 }
 
 .app-button {
+	border: 3px solid black;
 	text-align: center;
+	background-color: rgba(0,0,0,0);
+	width: 625px;
+	height: 70px;
 }
 
 .the-button {
-	border: 3px solid black;
-	background-color: rgba(0,0,0,0);
 	padding: 10px;
 	padding-right: 15px;
 	padding-left: 15px;
-	font-family:GothamMedium;
+	font-family: GothamMedium;
 	font-size: 30px;
-	width: 625px;
-	height: 70px;
-	position: relative;
+	background-color: rgba(0,0,0,0);
+	border: 0px;
 }
 
 .teal-offset-button {
@@ -642,11 +643,11 @@ iframe:hover {
 	width: 625px;
 	height: 70px;
 	z-index: -1;
-	margin-top: -60px;
+	margin-top: -55px;
 	margin-left: 115px;
 }
 
-.app-button:hover .the-button {
+.app-button:hover {
 	background-color: #09ffe7;
 }
 
