added nav bar to apply page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -668,6 +668,10 @@ iframe:hover {
 	color: #09ffe7;
 }
 
+#longer-step {
+	line-height: 20px;
+}
+
 
 /* -------------------------- animation stuff im trying -------------------------- */
 
