--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,7 +12,6 @@
 		 url('gothambook-webfont.woff2') format('woff2'),
          url('gothambook-webfont.woff') format('woff');
 }
-
 h1 {
 	font-size: 150px;
 }
@@ -48,6 +47,8 @@ p{
 }
 #aboutPage{
     margin-top: 30px;
+    z-index: 9999;
+    background: white;
 }
 .hackCvilleLogo{
     width: 40px;
@@ -72,8 +73,8 @@ p{
 }
 
 .hero-image {
-	background-image: url("../images/header.png");
-	background-color: black;
+/*	background-image: url("../images/header.png");*/
+/*	background-color: black;*/
 	width: 100%;
 	height: 600px;
 	background-position: center;
@@ -81,6 +82,34 @@ p{
 	background-size: cover;
 	position: relative;
 	margin: 0 auto;
+    border: none;
+    
+}
+.header-unit {
+  height: 600px;
+  border: none;
+  position: relative;
+  padding: 20px;
+}
+#video-container {
+	position: absolute;
+    border: none;
+}
+#video-container {
+	top:0%;
+	left:0%;
+	height:100%;
+	width:100%;
+	overflow: hidden;
+}
+video {
+	position:absolute;
+	z-index:0;
+    border: none;
+}
+video.fillWidth {
+	width: 100%;
+    border: none
 }
 
 .hero-text {
@@ -92,6 +121,24 @@ p{
 	transform: translate(-50%, -50%);
     color: white;
     font-family: GothamMedium;
+}
+
+.fullscreen-bg {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
+}
+
+.fullscreen-bg__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #hero-title {
