--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -73,8 +73,8 @@ p{
 }
 
 .hero-image {
-/*	background-image: url("../images/header.png");*/
-/*	background-color: black;*/
+	background-image: url("../images/heroImage2.png");
+	background-color: white;
 	width: 100%;
 	height: 600px;
 	background-position: center;
@@ -870,6 +870,12 @@ a.backToTop:hover{
 	.mobile-text {
 		font-size: 15px;
 	}
+    .video-container{
+        display: none;
+    }
+    .header-unit{
+        display: none;
+    }
 }
 
 @media screen and (max-width: 1000px) {
